--- a/contact.html
+++ b/contact.html
@@ -61,28 +61,46 @@
     </section>
 
     <section id="map">
-        <h2>Our Location</h2>
         <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d516.5208797473604!2d85.3528098800881!3d27.746998308300874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb191c6abec541%3A0xd6abd060cebdf159!2sFresh%20Motors!5e0!3m2!1sen!2snp!4v1731205902342!5m2!1sen!2snp"
                 width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
-    <footer>
-        <div class="footer-col">
-            <img src="image/logo.jpg" alt="" class="logo">
-            <p>Contact us at:</p>
-            <p>+91 9765989843 | support@sheetsandstyles.com</p>
-        </div>
-        <div class="footer-col follow">
-            <h4>Follow Us</h4>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest-p"></i>
-            <i class="fab fa-youtube"></i>
-        </div>
-        <p>©2024 Sheets & Styles</p>
-    </footer>
+        <!-- Footer Section -->
+        <footer class="section-p1">
+            <div class="col">
+                <img src="image/logo.jpg" alt="logo" class="logo">
+                <h4>Contact</h4>
+                <p>Address: <strong>Sundarbasti, Bhangal</strong></p>
+                <p>Phone: <strong>9765989843</strong></p>
+                <div class="follow">
+                    <h4>Follow Us</h4>
+                    <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-pinterest-p"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <h4>About</h4>
+                <a href="about.html">About Us</a>
+                <a href="delivery-info.html">Delivery Information</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="terms-conditions.html">Terms and Conditions</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="login.html">Sign in</a>
+                <a href="view-cart.html">View Cart</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="terms-conditions.html">Terms and Conditions</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
+        </footer>
     <script src="script.js"></script>
 </body>
 
